--- a/Labeling/Cleaning_labeling.ipynb
+++ b/Labeling/Cleaning_labeling.ipynb
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zGUytMofhoYc",
-        "outputId": "0a6a9d61-6f92-4b8e-dbd9-13e37ffb6ea2"
+        "outputId": "862bdeb3-9f88-464a-c346-5f1c5473a83a"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -62,12 +62,12 @@
           "text": [
             "Cloning into 'MADSmilestone2'...\n",
             "warning: --local is ignored\n",
-            "remote: Enumerating objects: 143, done.\u001b[K\n",
-            "remote: Counting objects: 100% (143/143), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (120/120), done.\u001b[K\n",
-            "remote: Total 143 (delta 62), reused 59 (delta 17), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (143/143), 608.73 KiB | 1.71 MiB/s, done.\n",
-            "Resolving deltas: 100% (62/62), done.\n",
+            "remote: Enumerating objects: 167, done.\u001b[K\n",
+            "remote: Counting objects: 100% (167/167), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (142/142), done.\u001b[K\n",
+            "remote: Total 167 (delta 77), reused 66 (delta 19), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (167/167), 668.90 KiB | 3.87 MiB/s, done.\n",
+            "Resolving deltas: 100% (77/77), done.\n",
             "/content/MADSmilestone2\n",
             "ian_testingground.ipynb  Images.ipynb  Images.py  Labeling  Loading  README.md\n"
           ],
@@ -91,10 +91,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 419
         },
         "id": "Oun-rTP7hxaV",
-        "outputId": "1411711d-cf16-4f9e-e2ed-7aed68775aa4"
+        "outputId": "ee70e737-207b-42f5-e704-c67b68a29dea"
       },
       "source": [
         "import pandas as pd\n",
@@ -109,7 +109,7 @@
         "rounds = pd.read_csv('Loading/round_data.csv')\n",
         "rounds"
       ],
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +240,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 12
         }
       ]
     },
@@ -262,7 +262,7 @@
           "height": 561
         },
         "id": "QFvCzHPwh_Ka",
-        "outputId": "430d10ba-0354-4413-bb2b-908dd2ef2a30"
+        "outputId": "23b4d74c-7102-43c3-ece2-76cba4ceb0b3"
       },
       "source": [
         "print(\"Column values for clock scores: \\n\", rounds['cg1dclkdraw'].unique())\n",
@@ -270,7 +270,7 @@
         "print(\"\\nVariable types: \\n\", rounds.dtypes)\n",
         "rounds[rounds['cg1dclkdraw'] == '-1 Inapplicable'].head()"
       ],
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 13
         }
       ]
     },
@@ -389,14 +389,14 @@
           "height": 419
         },
         "id": "muUutFNyiAn6",
-        "outputId": "50646f2c-4ee8-411c-f531-9d445be2241b"
+        "outputId": "2cceca00-261d-4225-d783-790dad3a5fdf"
       },
       "source": [
         "# Load the cleaned dataframe\n",
         "cleaned_rounds = cr.clean_data(rounds)\n",
         "cleaned_rounds"
       ],
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +527,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 14
         }
       ]
     },
@@ -538,14 +538,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QoZxMd9yiCvb",
-        "outputId": "c96d8fdf-1017-4c61-f102-2ec5216c8650"
+        "outputId": "b382f88e-aac5-4441-f7b9-5bcf5abe20de"
       },
       "source": [
         "#Check that we only have healthscores of 1, 2, 7 and subjects that have drawn clocks\n",
         "print(\"health score check: \\n\",cleaned_rounds.cg1dclkdraw.unique())\n",
         "print(\"\\n clock scores check: \\n\",cleaned_rounds['hc1disescn9'].unique())"
       ],
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,7 +573,7 @@
           "height": 770
         },
         "id": "hLa7vIiRiFB5",
-        "outputId": "6d94929f-8e6e-415e-d68e-a7534ec62811"
+        "outputId": "af57991f-4bf2-47dc-b408-85392f188a1c"
       },
       "source": [
         "# Check balance of dataset\n",
@@ -588,7 +588,7 @@
         "plt.ylabel(\"Counts\")\n",
         "plt.show(b)"
       ],
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -630,16 +630,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 521
+          "height": 419
         },
         "id": "-kLcAS67iGuL",
-        "outputId": "b821ec04-445f-4459-e543-fbad7335b7c0"
+        "outputId": "940679ad-0dd6-46c9-d7c2-3293af11850f"
       },
       "source": [
         "labeled_data = ld.create_labels(cleaned_rounds)\n",
         "labeled_data"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +782,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 17
         }
       ]
     },
@@ -794,23 +794,23 @@
           "height": 282
         },
         "id": "k3qRf4kniK5_",
-        "outputId": "135e0c98-d955-48fc-dc5d-6085631c096a"
+        "outputId": "93dfb296-8009-480d-d14c-797b9424489f"
       },
       "source": [
         "# Look at distribution of labels\n",
         "labeled_data.label.hist() "
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f613f8f3fd0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f4e8f7d5fd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
@@ -844,13 +844,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LPeCooHQiM_k",
-        "outputId": "6e4a64c4-6864-4915-e7f0-6363d4a228e5"
+        "outputId": "93b64be7-9f34-42f6-c4b1-808617c2ae7f"
       },
       "source": [
         "ids = ld.get_ids(labeled_data)\n",
         "ids[1]['10000003'] "
       ],
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +860,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 19
         }
       ]
     },
@@ -879,13 +879,13 @@
         "except:\n",
         "    print(\"Unable to write to file\")"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4eIpG3gBkUvJ"
+        "id": "738YDcIEc4ge"
       },
       "source": [
         ""
