Updated label documentation

--- a/Cleaning_labeling.ipynb
+++ b/Cleaning_labeling.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Cleaning_labeling.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOytOneBzDNg48IvP1EsKxN",
+      "authorship_tag": "ABX9TyOmWcZ0XFePYSxGJoRCc+tF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,82 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DqglY6Rux9co"
+      },
+      "source": [
+        "# Exploring, Cleaning and Labeling the data\n",
+        "### Stacey Beck and Ian Byrne\n",
+        "\n",
+        "<br><br/>\n",
+        "\n",
+        "##### **AI Crowd Labeling Method**\n",
+        "\n",
+        "We received inspiration from the AI Crowd's Alzheimer's Clock Challenge and reached out to their data team inquiring about labeling the clock images for that challenge. Ankit < insert last name > explained that they use the values in the variable 'hc1disescn9' to help label the images. The variable 'hc1disescn9' contains values that indicate whether someone has dementia/Alzheimer's or not. A response of '1 YES' indicates that they have a confirmed diagnosis of Alzheimer's or Dementia and '2 NO' indicates no diagnosis has been given. A value of '7' indicates that a response of '1 YES' has already been recorded in a previous round. AI Crowd labeled each image as either:\n",
+        "  - 0 - Pre-Alzheimers\n",
+        "  - 1 - Post-Alzheimers \n",
+        "  - 2 - Normal\n",
+        "\n",
+        "If a subject reports '1 YES' in the variable 'hc1disescn9' in a later round, all the previous rounds receive the label '0 - Pre-Alzheimers'. All 'hc1disescn9' reports of '1 YES' and '7' receive the label '1 - Post-Alzheimers' for the current and subsequent rounds.  All else receive the label '2 - Normal.' \n",
+        "\n",
+        "We provide code to produce labels using this algorithm. \n",
+        "\n",
+        " \n",
+        "<br><br/>\n",
+        " \n",
+        "##### **NHATs Study Criteria used to help make Labels**\n",
+        "\n",
+        "In addition, we also feel that this way of labeling can lead to false negatives in terms of whether someone might have dementia/Alzheimer's disease. There may be participants whose diagnosis has gone undetected by medical professionals and who are able to complete the NHATs survey, thus leading to a label of '2 - Normal' for their drawings. \n",
+        "\n",
+        "In order to provide a potentially more robust set of label parameters, we will also implement a label strategy that mimicks the NHAT study found in this report. https://www.nhats.org/sites/default/files/inline-files/DementiaTechnicalPaperJuly_2_4_2013_10_23_15.pdf (page 2)\n",
+        "\n",
+        "\n",
+        "We will use these specific labels to identify if someone has:\n",
+        "- 0 - 'Possible Dementia'\n",
+        "- 1 - 'Probable Dementia' (Likely Dementia)\n",
+        "- 2 - 'No Dementia' \n",
+        "\n",
+        "**Variables used to help classify '0' for \"Possible Dementia\":**\n",
+        "- One cognitive test score with cut off <= 1.5 SD below the mean. \n",
+        "\n",
+        "**Variables used to help classify '1' for 'Probable Dementia' include:**\n",
+        "-  'hc1disescn9' for diagnosis ('1 YES', '2 NO', '7') and if this is not provided we will look at:\n",
+        "  - 'cp1dad8dem' which provides a diagnosing like score through the use of a proxy. \n",
+        "- Two cognitive test scores with cut offs <= 1.5 SD below the mean. \n",
+        "\n",
+        "\n",
+        "**All else will be labeled as '2' for 'No Dementia.\"**\n",
+        "\n",
+        "<br><br/>\n",
+        "The cognitive tests are based in three domains:\n",
+        "- ***Orientation*** \n",
+        "    - President and VP First and Last names: **'cg1presidna1', 'cg1presidna3', 'cg1vpname1', 'cg1vpname3'**\n",
+        "    - Date, Month, Year, Day of the Week: **'cg1todaydat1' (Month), 'cg1todaydat2' (Day), 'cg1todaydat3' (Year), 'cg1todaydat4' (Day of the Week)**\n",
+        "    - Each correct answer gets a point; Total points out of 8.\n",
+        "    - Score cut point for <= 1.5 SD below the mean is <= 3 across all variables\n",
+        "- ***Memory*** \n",
+        "    - Delayed Word Recall: **'cg1dwrdimmrc' (total Score)**\n",
+        "    - Immediate Word Recall: **'cg1dwrddlyrc' (total Score)** \n",
+        "    - Total points out of 20\n",
+        "    - Score cut off is <= 3 across all variables\n",
+        "- ***Executive Functioning*** \n",
+        "    - Clock Drawing Battery: **'cg1dclkdraw'**\n",
+        "    - Total points out of 5\n",
+        "    - Score cut off is <= 1 \n",
+        "\n",
+        "\n",
+        "***Each variable is used for all 9 years of this study and change only by the number value located within the variable name.***\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zGUytMofhoYc",
-        "outputId": "6047cf70-5e15-4462-d02c-983d2dc3d2ca"
+        "outputId": "21ab8030-369c-45dc-dd7f-f1aee0a6d874"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -46,23 +115,24 @@
         "# List repo contents\n",
         "!ls"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Cloning into 'MADSmilestone2'...\n",
             "warning: --local is ignored\n",
-            "remote: Enumerating objects: 182, done.\u001b[K\n",
-            "remote: Counting objects: 100% (182/182), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (154/154), done.\u001b[K\n",
-            "remote: Total 182 (delta 86), reused 72 (delta 22), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (182/182), 671.54 KiB | 6.33 MiB/s, done.\n",
-            "Resolving deltas: 100% (86/86), done.\n",
+            "remote: Enumerating objects: 214, done.\u001b[K\n",
+            "remote: Counting objects: 100% (214/214), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (181/181), done.\u001b[K\n",
+            "remote: Total 214 (delta 103), reused 83 (delta 27), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (214/214), 1.37 MiB | 13.13 MiB/s, done.\n",
+            "Resolving deltas: 100% (103/103), done.\n",
             "/content/MADSmilestone2\n",
-            "ian_testingground.ipynb  Images.ipynb  Images.py  Labeling  Loading  README.md\n"
-          ],
-          "name": "stdout"
+            "Cleaning_labeling.ipynb  Images.ipynb  Labeling  README.md\n",
+            "ian_testingground.ipynb  Images.py     Loading\t Supervised_CNN.ipynb\n"
+          ]
         }
       ]
     },
@@ -85,7 +155,7 @@
           "height": 419
         },
         "id": "Oun-rTP7hxaV",
-        "outputId": "3ba97126-a49c-46ae-c326-fb40fa0b1bf1"
+        "outputId": "af730692-ea06-4ef7-b966-42c11e0403e8"
       },
       "source": [
         "import pandas as pd\n",
@@ -253,7 +323,7 @@
           "height": 561
         },
         "id": "QFvCzHPwh_Ka",
-        "outputId": "335b27e6-987f-4e84-a5fb-a2d31378d6c1"
+        "outputId": "692f8f31-4362-4920-ada7-a84be6d185ae"
       },
       "source": [
         "print(\"Column values for clock scores: \\n\", rounds['cg1dclkdraw'].unique())\n",
@@ -265,6 +335,7 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Column values for clock scores: \n",
             " ['3 Mildly distorted depiction of a clock'\n",
@@ -287,8 +358,7 @@
             "hc1disescn9     object\n",
             "round            int64\n",
             "dtype: object\n"
-          ],
-          "name": "stdout"
+          ]
         },
         {
           "output_type": "execute_result",
@@ -380,7 +450,7 @@
           "height": 419
         },
         "id": "muUutFNyiAn6",
-        "outputId": "c12e2f48-b40e-4f3a-f915-a946aa059c7e"
+        "outputId": "8cec757e-fda9-4c19-ab76-d32ce352bb61"
       },
       "source": [
         "# Load the cleaned dataframe\n",
@@ -606,6 +676,35 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3B-W2_H9HfXV"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "df = cleaned_rounds\n",
+        "\n",
+        "# Assign label of 2 or 1\n",
+        "df['label'] = [2 if x == 2 else 1 for x in df['hc1disescn9']]\n",
+        "\n",
+        "# Changing Round 1-3\n",
+        "for rounds in df['round'].unique()[:-1]:\n",
+        "    round_val = rounds\n",
+        "\n",
+        "    round_post = df[df['round'] == (round_val + 1)]\n",
+        "    # assign label value of 0 to the previous round where diagnosis changed from a 2.0 to 1.0\n",
+        "    # diagnoses value of 7 corresponds to previous round value of 1, label stays a 1\n",
+        "\n",
+        "    post1 = round_post[round_post['hc1disescn9'] == 1]\n",
+        "    df.loc[(df['round'] == round_val) & df['spid'].isin(post1['spid']), 'label'] = 0\n",
+        "\n",
+        "df"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -855,7 +954,7 @@
         "except:\n",
         "    print(\"Unable to write to file\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
