--- a/Labeling/Cleaning_labeling.ipynb
+++ b/Labeling/Cleaning_labeling.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Cleaning_labeling.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPC0qGXwy9+C7fy8IVoivY0",
+      "authorship_tag": "ABX9TyMKwxOscdiFs8pl4oMa9MjP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,70 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1kZ8roTFjO0Y"
+        "id": "DqglY6Rux9co"
       },
       "source": [
-        "#Clone Repository and Load in Rounds Data\n"
+        "# Exploring, Cleaning and Labeling the data\n",
+        "### Stacey Beck and Ian Byrne\n",
+        "\n",
+        "<br><br/>\n",
+        "\n",
+        "##### **AI Crowd Labeling Method**\n",
+        "\n",
+        "We received inspiration from the AI Crowd's Alzheimer's Clock Challenge and reached out to their data team inquiring about labeling the clock images for that challenge. Ankit < insert last name > explained that they use the values in the variable 'hc1disescn9' to help label the images. The variable 'hc1disescn9' contains values that indicate whether someone has dementia/Alzheimer's or not. A response of '1 YES' indicates that they have a confirmed diagnosis of Alzheimer's or Dementia and '2 NO' indicates no diagnosis has been given. A value of '7' indicates that a response of '1 YES' has already been recorded in a previous round. AI Crowd labeled each image as either:\n",
+        "  - 0 - Pre-Alzheimers\n",
+        "  - 1 - Post-Alzheimers \n",
+        "  - 2 - Normal\n",
+        "\n",
+        "If a subject reports '1 YES' in the variable 'hc1disescn9' in a later round, all the previous rounds receive the label '0 - Pre-Alzheimers'. All 'hc1disescn9' reports of '1 YES' and '7' receive the label '1 - Post-Alzheimers' for the current and subsequent rounds.  All else receive the label '2 - Normal.' \n",
+        "\n",
+        "We provide code to produce labels using this algorithm. \n",
+        "\n",
+        " \n",
+        "<br><br/>\n",
+        " \n",
+        "##### **NHATs Study Criteria used to help make Labels**\n",
+        "\n",
+        "In addition, we also feel that this way of labeling can lead to false negatives in terms of whether someone might have dementia/Alzheimer's disease. There may be participants whose diagnosis has gone undetected by medical professionals and who are able to complete the NHATs survey, thus leading to a label of '2 - Normal' for their drawings. \n",
+        "\n",
+        "In order to provide a potentially more robust set of label parameters, we will also implement a label strategy that mimicks the NHAT study found in this report. https://www.nhats.org/sites/default/files/inline-files/DementiaTechnicalPaperJuly_2_4_2013_10_23_15.pdf (page 2)\n",
+        "\n",
+        "\n",
+        "We will use these specific labels to identify if someone has:\n",
+        "- 0 - 'Possible Dementia'\n",
+        "- 1 - 'Probable Dementia' (Likely Dementia)\n",
+        "- 2 - 'No Dementia' \n",
+        "\n",
+        "**Variables used to help classify '0' for \"Possible Dementia\":**\n",
+        "- One cognitive test score with cut off <= 1.5 SD below the mean. \n",
+        "\n",
+        "**Variables used to help classify '1' for 'Probable Dementia' include:**\n",
+        "-  'hc1disescn9' for diagnosis ('1 YES', '2 NO', '7') and if this is not provided we will look at:\n",
+        "  - 'cp1dad8dem' which provides a diagnosing like score through the use of a proxy. \n",
+        "- Two cognitive test scores with cut offs <= 1.5 SD below the mean. \n",
+        "\n",
+        "\n",
+        "**All else will be labeled as '2' for 'No Dementia.\"**\n",
+        "\n",
+        "<br><br/>\n",
+        "The cognitive tests are based in three domains:\n",
+        "- ***Orientation*** \n",
+        "    - President and VP First and Last names: **'cg1presidna1', 'cg1presidna3', 'cg1vpname1', 'cg1vpname3'**\n",
+        "    - Date, Month, Year, Day of the Week: **'cg1todaydat1' (Month), 'cg1todaydat2' (Day), 'cg1todaydat3' (Year), 'cg1todaydat4' (Day of the Week)**\n",
+        "    - Each correct answer gets a point; Total points out of 8.\n",
+        "    - Score cut point for <= 1.5 SD below the mean is <= 3 across all variables\n",
+        "- ***Memory*** \n",
+        "    - Delayed Word Recall: **'cg1dwrdimmrc' (total Score)**\n",
+        "    - Immediate Word Recall: **'cg1dwrddlyrc' (total Score)** \n",
+        "    - Total points out of 20\n",
+        "    - Score cut off is <= 3 across all variables\n",
+        "- ***Executive Functioning*** \n",
+        "    - Clock Drawing Battery: **'cg1dclkdraw'**\n",
+        "    - Total points out of 5\n",
+        "    - Score cut off is <= 1 \n",
+        "\n",
+        "\n",
+        "***Each variable is used for all 9 years of this study and change only by the number value located within the variable name.***\n"
       ]
     },
     {
@@ -43,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zGUytMofhoYc",
-        "outputId": "862bdeb3-9f88-464a-c346-5f1c5473a83a"
+        "outputId": "ac050d64-8a3a-4985-ab86-3941e9d97c4d"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -59,19 +119,20 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Cloning into 'MADSmilestone2'...\n",
             "warning: --local is ignored\n",
-            "remote: Enumerating objects: 167, done.\u001b[K\n",
-            "remote: Counting objects: 100% (167/167), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (142/142), done.\u001b[K\n",
-            "remote: Total 167 (delta 77), reused 66 (delta 19), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (167/167), 668.90 KiB | 3.87 MiB/s, done.\n",
-            "Resolving deltas: 100% (77/77), done.\n",
+            "remote: Enumerating objects: 217, done.\u001b[K\n",
+            "remote: Counting objects: 100% (217/217), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (184/184), done.\u001b[K\n",
+            "remote: Total 217 (delta 105), reused 83 (delta 27), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (217/217), 1.37 MiB | 11.26 MiB/s, done.\n",
+            "Resolving deltas: 100% (105/105), done.\n",
             "/content/MADSmilestone2\n",
-            "ian_testingground.ipynb  Images.ipynb  Images.py  Labeling  Loading  README.md\n"
-          ],
-          "name": "stdout"
+            "Cleaning_labeling.ipynb  Images.ipynb  Labeling  README.md\n",
+            "ian_testingground.ipynb  Images.py     Loading\t Supervised_CNN.ipynb\n"
+          ]
         }
       ]
     },
@@ -87,6 +148,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "idWgB3oM5Elz"
+      },
+      "source": [
+        "### AI Crowd Labeling Strategy\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -94,7 +167,7 @@
           "height": 419
         },
         "id": "Oun-rTP7hxaV",
-        "outputId": "ee70e737-207b-42f5-e704-c67b68a29dea"
+        "outputId": "af730692-ea06-4ef7-b966-42c11e0403e8"
       },
       "source": [
         "import pandas as pd\n",
@@ -109,7 +182,7 @@
         "rounds = pd.read_csv('Loading/round_data.csv')\n",
         "rounds"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 2
         }
       ]
     },
@@ -262,7 +335,7 @@
           "height": 561
         },
         "id": "QFvCzHPwh_Ka",
-        "outputId": "23b4d74c-7102-43c3-ece2-76cba4ceb0b3"
+        "outputId": "692f8f31-4362-4920-ada7-a84be6d185ae"
       },
       "source": [
         "print(\"Column values for clock scores: \\n\", rounds['cg1dclkdraw'].unique())\n",
@@ -270,10 +343,11 @@
         "print(\"\\nVariable types: \\n\", rounds.dtypes)\n",
         "rounds[rounds['cg1dclkdraw'] == '-1 Inapplicable'].head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Column values for clock scores: \n",
             " ['3 Mildly distorted depiction of a clock'\n",
@@ -296,8 +370,7 @@
             "hc1disescn9     object\n",
             "round            int64\n",
             "dtype: object\n"
-          ],
-          "name": "stdout"
+          ]
         },
         {
           "output_type": "execute_result",
@@ -377,7 +450,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 3
         }
       ]
     },
@@ -389,14 +462,14 @@
           "height": 419
         },
         "id": "muUutFNyiAn6",
-        "outputId": "2cceca00-261d-4225-d783-790dad3a5fdf"
+        "outputId": "8cec757e-fda9-4c19-ab76-d32ce352bb61"
       },
       "source": [
         "# Load the cleaned dataframe\n",
         "cleaned_rounds = cr.clean_data(rounds)\n",
         "cleaned_rounds"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +600,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 4
         }
       ]
     },
@@ -538,14 +611,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QoZxMd9yiCvb",
-        "outputId": "b382f88e-aac5-4441-f7b9-5bcf5abe20de"
+        "outputId": "6c282d03-fa39-4752-a3c6-8c2a2ea5d310"
       },
       "source": [
         "#Check that we only have healthscores of 1, 2, 7 and subjects that have drawn clocks\n",
         "print(\"health score check: \\n\",cleaned_rounds.cg1dclkdraw.unique())\n",
         "print(\"\\n clock scores check: \\n\",cleaned_rounds['hc1disescn9'].unique())"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,7 +646,7 @@
           "height": 770
         },
         "id": "hLa7vIiRiFB5",
-        "outputId": "af57991f-4bf2-47dc-b408-85392f188a1c"
+        "outputId": "749fc520-b7e6-40db-c68b-ff9c21fbaa98"
       },
       "source": [
         "# Check balance of dataset\n",
@@ -588,7 +661,7 @@
         "plt.ylabel(\"Counts\")\n",
         "plt.show(b)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -633,13 +706,13 @@
           "height": 419
         },
         "id": "-kLcAS67iGuL",
-        "outputId": "940679ad-0dd6-46c9-d7c2-3293af11850f"
+        "outputId": "e6bc3793-a518-4140-d887-154867651e01"
       },
       "source": [
         "labeled_data = ld.create_labels(cleaned_rounds)\n",
         "labeled_data"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +855,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 7
         }
       ]
     },
@@ -794,23 +867,23 @@
           "height": 282
         },
         "id": "k3qRf4kniK5_",
-        "outputId": "93dfb296-8009-480d-d14c-797b9424489f"
+        "outputId": "11ab3225-3430-4d2e-d84a-a977f1c32c33"
       },
       "source": [
         "# Look at distribution of labels\n",
         "labeled_data.label.hist() "
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f4e8f7d5fd0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f161c364750>"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -840,29 +913,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LPeCooHQiM_k",
-        "outputId": "93b64be7-9f34-42f6-c4b1-808617c2ae7f"
+        "id": "LPeCooHQiM_k"
       },
       "source": [
         "ids = ld.get_ids(labeled_data)\n",
-        "ids[1]['10000003'] "
+        "ids"
       ],
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -879,13 +937,25 @@
         "except:\n",
         "    print(\"Unable to write to file\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JP2W17bY5jwj"
+      },
+      "source": [
+        "### NHATs Strategy for Labeling Data\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "738YDcIEc4ge"
+        "id": "jxTvtXTs5z5A"
       },
       "source": [
         ""
