--- a/Supervised_CNN.ipynb
+++ b/Supervised_CNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "10WdpyFVm5G8J5AJrHPelKDpmooAreyPw",
-      "authorship_tag": "ABX9TyPjVS/DlrTNOxxF+jH6lnYw",
+      "authorship_tag": "ABX9TyNx9olNPsHd0AD8S+dc4kBH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,6 +317,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4nKizV2h4lMH"
+      },
+      "source": [
+        "### Training"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "I5xpaSNBrNR5"
@@ -350,9 +359,9 @@
         "\n",
         "# Variables for X - X_train, X_val, X_test\n",
         "#Variables for y - y_train, y_val, y_test\n",
-        "train_loader = torch.utils.data.DataLoader(X_train, batch_size = batch_size, shuffle = False)\n",
-        "validate_loader = torch.utils.data.DataLoader(X_val, batch_size = batch_size, shuffle = False)\n",
-        "test_loader = torch.utils.data.DataLoader(X_test, batch_size = batch_size, shuffle = False)\n",
+        "train_loader = torch.utils.data.DataLoader((X_train, y_train), batch_size = batch_size, shuffle = False) #need to load in y_train too\n",
+        "validate_loader = torch.utils.data.DataLoader((X_val, y_val), batch_size = batch_size, shuffle = False)\n",
+        "test_loader = torch.utils.data.DataLoader((X_test, y_test), batch_size = batch_size, shuffle = False)\n",
         "\n",
         "\n",
         "classes = (0, 1, 2)\n",
@@ -375,7 +384,28 @@
         "n_total_steps = len(train_loader) # Need to define this above\n",
         "\n",
         "for epoch in range(num_epochs):\n",
-        "  \n",
+        "  for i, (images, labels) in enumerate(train_loader):\n",
+        "    #shape (32, 368, 284) = 32, 104512\n",
+        "    #kernel size (can set large?)\n",
+        "    images = images.to(device) # for GPU support\n",
+        "    label = labels.to(device)\n",
+        "\n",
+        "    # Forward pass through NN\n",
+        "    outputs = model(images)\n",
+        "    loss = criterion(outputs, labels)\n",
+        "\n",
+        "    # Backward pass, updating weights\n",
+        "    optimizer.zero_grad() #\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if (i + 1) % 100 == 0:\n",
+        "      print()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
