simple cnn model

--- a/Supervised_CNN.ipynb
+++ b/Supervised_CNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "10WdpyFVm5G8J5AJrHPelKDpmooAreyPw",
-      "authorship_tag": "ABX9TyNZVqXzUEj3uJqWsDO1x4Hx",
+      "authorship_tag": "ABX9TyPDiHvpn+33R/+1Qm7ey323",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Eoct7Or8ezZq",
-        "outputId": "4750f643-6fa5-4e2f-b16f-804f6661eb0b"
+        "outputId": "277c9f80-cdcd-4bfb-8fd6-15a73da806ff"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -70,7 +70,7 @@
         "# List repo contents\n",
         "#!ls"
       ],
-      "execution_count": 1,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,13 +78,13 @@
           "text": [
             "Cloning into 'MADSmilestone2'...\n",
             "warning: --local is ignored\n",
-            "remote: Enumerating objects: 376, done.\u001b[K\n",
-            "remote: Counting objects: 100% (376/376), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (310/310), done.\u001b[K\n",
-            "remote: Total 376 (delta 207), reused 143 (delta 60), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (376/376), 3.01 MiB | 4.33 MiB/s, done.\n",
-            "Resolving deltas: 100% (207/207), done.\n",
-            "/content/MADSmilestone2\n"
+            "remote: Enumerating objects: 379, done.\u001b[K\n",
+            "remote: Counting objects: 100% (379/379), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (313/313), done.\u001b[K\n",
+            "remote: Total 379 (delta 208), reused 143 (delta 60), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (379/379), 3.02 MiB | 984.00 KiB/s, done.\n",
+            "Resolving deltas: 100% (208/208), done.\n",
+            "/content/MADSmilestone2/MADSmilestone2\n"
           ]
         }
       ]
@@ -105,7 +105,7 @@
         "import Images\n",
         "from tqdm import tqdm"
       ],
-      "execution_count": 2,
+      "execution_count": 147,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
       "source": [
         "#!rm -rf /content/MADSmilestone2"
       ],
-      "execution_count": 3,
+      "execution_count": 148,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
         "dictionary = ast.literal_eval(contents)\n",
         "cust_file.close()"
       ],
-      "execution_count": 4,
+      "execution_count": 149,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "  plt.imshow(im2)\n",
         "  plt.show()"
       ],
-      "execution_count": 139,
+      "execution_count": 150,
       "outputs": []
     },
     {
@@ -392,10 +392,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 303
+          "height": 320
         },
         "id": "RhabT4VULYLp",
-        "outputId": "5b335193-d791-4d48-da9f-5bffb45beb95"
+        "outputId": "90dff615-d7dc-4dae-c721-1fc2a5191bc3"
       },
       "source": [
         "def imshow(img):\n",
@@ -408,17 +408,25 @@
         "# get some random training images\n",
         "dataiter = iter(train_loader)\n",
         "images, labels = dataiter.next()\n",
+        "print(images.size())\n",
         "\n",
         "# show images\n",
-        "imshow(torchvision.utils.make_grid(images))\n",
+        "imshow(torchvision.utils.make_grid(images, nrow = 4))\n",
         "# print labels\n",
         "print('Labels:')\n",
         "print(' '.join('%5s' % classes[labels[j]] for j in range(batch_size)))\n",
         "\n",
         "#Printing as RGB, just using basic pytorch dataloader likely converting to rbg"
       ],
-      "execution_count": 145,
+      "execution_count": 171,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([4, 368, 284])\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -454,31 +462,33 @@
         "\n",
         "class ConvNet(n.Module):\n",
         "  def __init__(self):\n",
-        "    #Image 1, 386, 284 \n",
-        "    #Inputs (batch, channel, height, width)\n",
-        "    # \n",
-        "    self.net = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels = 284, out_channels = 282, \n",
-        "                           kernel_size = 3, stride = 1, padding = 1)\n",
-        "        nn.ReLU()\n",
-        "        nn.MaxPool2d()\n",
-        "        nn.Conv2d()\n",
-        "        nn.ReLU \n",
-        "        nn.MaxPooL2d()\n",
-        "     )\n",
-        "    \n",
-        "    #flatten first \n",
+        "    super(ConvNet, self).__init__()\n",
+        "    # without considering batch size: Input shape : (None,368, 284, 1) , parameters: (3*3*1*16+16) = 160\n",
+        "    self.conv1 = nn.Conv2d(in_channels = 1, out_channels = 16, # one input channel gray scale, 16 filters out\n",
+        "                            kernel_size = 3, stride = 1, padding = 1) #Out:(None,368, 284, 16)\n",
         "\n",
-        "    self.classifer = nn.Sequential(\n",
-        "        nn.Linear()\n",
-        "        nn.ReLU()\n",
-        "        nn.Linear()\n",
-        "    )\n",
-        "  \n",
-        "    \n",
+        "    #Normalize each output to help w/ faster learning                       \n",
+        "    self.bn1 = nn.BatchNorm2d(16)\n",
+        "    self.pool1 = nn.MaxPool2d(2, 2) #Out: (None, 184, 142, 16)\n",
+        "    self.conv2 = nn.Conv2d(in_channels = 16, out_channels = 32, \n",
+        "                          kernel_size = 3, stride = 1, padding = 1) #Out: (None, 184, 142, 32), params: (3*3*16*32+32) = 4640                         \n",
+        "    self.bn2 = nn.BatchNorm2d(32) \n",
+        "    self.pool2 = nn.MaxPool2d(2, 2) #Output shape = (None, 92, 71, 32)\n",
+        "    # Flatten\n",
+        "    self.fc1 = nn.Linear(32*92*71,120)\n",
+        "    self.fc2 = nn.Linear(120, 30)\n",
+        "    self.fc3 = nn.Linear(30, 3) # left with 3 for the three classes\n",
+        "\n",
+        "\n",
         "  def forward(self, x):\n",
-        "    pass\n",
+        "    x = self.pool1(self.bn1(F.relu(self.conv1(x))))\n",
+        "    x = self.pool2(self.bn2(F.relu(self.conv2(x))))\n",
+        "    x = x.view(32*92*71)\n",
+        "    x = F.relu(self.fc1(x))\n",
+        "    x = F.relu(self.fc2(x))\n",
+        "    x = self.fc3(x)\n",
         "\n",
+        "    return x\n",
         "\n",
         "\n",
         "  \n",
